# NeuralCompression

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  dev-requirements.txt  hubconf.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_template.md  config.yml  enhancement_template.md
.github/workflows/: build-and-test.yml  docs.yml  lint.yml  linting-and-tests.yml  publish-package.yml  publish.yml  test.yml
docs/: make.bat  requirements.txt
docs/examples/: plot_example.py  plot_image_compression.py
docs/source/: conf.py  data.rst  distributions.rst  entropy_coders.rst  functional.rst  index.rst  layers.rst  metrics.rst  models.rst
neuralcompression/: __init__.py
neuralcompression/_outputs/: __init__.py  _discriminator_output.py  _hyperprior_output.py  _vqvae_autoencoder_output.py
neuralcompression/csrc/: __init__.py  bar_py.cpp  foo_py.cpp
neuralcompression/data/: __init__.py  _clic_2020_image.py  _clic_2020_video.py  _div2k_dataset.py  _food_101.py  _kodak.py  _openimages_v6.py  _pcam.py  _vimeo_90k_septuplet.py  clic2020.py  clic2020_image_compression.py  clic2020_video.py  kodak.py  vimeo90k.py
neuralcompression/distributions/: __init__.py  _factorized.py  _monotonic.py  _noisy_factorized.py  _noisy_logistic.py  _noisy_normal.py  _round.py  _soft_round.py  _uniform_noise.py
neuralcompression/entropy_coders/: __init__.py  jax_arithemetic_coder.py
neuralcompression/ext/: __init__.py  _extension_loader.py  foo_py.cc  pmf_to_quantized_cdf_py.cc
neuralcompression/functional/: __init__.py  _count_flops.py  _dense_image_warp.py  _estimate_tails.py  _hsv2rgb.py  _hsv_to_rgb.py  _image_to_255_scale.py  _information_content.py  _learned_perceptual_image_patch_similarity.py  _least_squares_adversarial_loss.py  _log_cdf.py  _log_expm1.py  _log_ndtr.py  _log_sf.py  _log_survival_function.py  _logsf.py  _lower_bound.py  _lower_tail.py  _lpips.py  _ms_ssim.py  _multiscale_structural_similarity.py  _ndtr.py  _non_saturating_adversarial_loss.py  _optical_flow_to_color.py  _pad_image.py  _pmf_to_quantized_cdf.py  _quantization_offset.py  _sf.py  _soft_round.py  _soft_round_conditional_mean.py  _soft_round_inverse.py  _survival_function.py  _unbounded_index_range_encode.py  _upper_bound.py  _upper_tail.py  _weighted_rate_loss.py  complexity.py  distortion.py  information.py  visualize.py  (+1 more)
neuralcompression/layers/: __init__.py  _absolute_value.py  _analysis_transformation_2d.py  _channel_norm.py  _continuous_batched_entropy.py  _continuous_entropy.py  _factorized_prior.py  _generalized_divisive_normalization.py  _hyper_analysis_transformation.py  _hyper_analysis_transformation_2d.py  _hyper_synthesis_transformation.py  _hyper_synthesis_transformation_2d.py  _mean_scale_hyperprior.py  _non_negative_parameter.py  _non_negative_parameterization.py  _normalize_latent.py  _prior.py  _project_latent.py  _q_bottleneck.py  _rate_distortion_loss.py  _rate_mse_distortion_loss.py  _scale_hyperprior.py  _simplified_gdn.py  _synthesis_transformation_2d.py  _vq_bottleneck.py  _xca.py  gdn.py
neuralcompression/loss_fn/: __init__.py  _binary_crossentropy_loss.py  _distortion_loss.py  _gan_losses.py  _mse_loss.py  _mse_lpips_loss.py  _normfix_lpips.py  _oasis_loss.py  _target_rate_config.py
neuralcompression/metrics/: __init__.py  _calc_psnr.py  _dists.py  _fid.py  _fid_swav.py  _kid.py  _msssim.py  _pickle_size.py  _update_patch_fid.py  distortion.py
neuralcompression/models/: __init__.py  _deep_video_compression.py  _discriminator.py  _factorized_prior.py  _factorized_prior_autoencoder.py  _hific_autoencoder.py  _hific_encoder_decoder.py  _hyperprior_autoencoder.py  _lpips.py  _mean_scale_hyperprior_autoencoder.py  _prior.py  _prior_autoencoder.py  _scale_hyperprior_autoencoder.py  _unet_discriminator.py  _vqvae_projector.py  _vqvae_xcit_autoencoder.py  deep_video_compression.py  hific.py  scale_hyperprior.py
neuralcompression/optim/: __init__.py  _identity.py  _ramp_const_cosine.py  _ramp_cosine.py
neuralcompression/zoo/: __init__.py  _msillm.py  _msillm_projector.py  _msillm_vqvae.py  _noganms.py
projects/: README.md
projects/bits_back_diffusion/: .gitignore  README.md  compute_vlb.py  encode.py  environment.yml  test.py  train.py
projects/deep_video_compression/: README.md  _utils.py  data_module.py  dvc_module.py  requirements.txt  train.py
projects/illm/: README.md  _default_transforms.py  default_transforms.py  eval_folder_example.py  gan_compression_module.py  image_module.py  open_images_datamodule.py  requirements.txt  results.csv  target_compression_module.py  train.py
projects/jax_entropy_coders/: README.md  jax_arithmetic_coder.py  requirements.txt  test_entropy_coders.py
projects/scale_hyperprior_lightning/: README.md  requirements.txt  scale_hyperprior.py  scale_hyperprior_lightning.py  train.py  vimeo.py
projects/torch_vct/: .gitignore  README.md  environment.yml  model_lightning.py  model_pipeline.py  model_train.py
tests/: conftest.py  test_clic2020.py  test_clic2020_image.py  test_clic_2020_image.py  test_clic_2020_video.py  test_complexity.py  test_distortion.py  test_entropy_coders.py  test_functional.py  test_kodak.py  test_layers_gdn.py  test_models.py  test_scale_hyperprior.py  test_vimeo_90k.py  utils.py
tests/cached_data/: create_cached_tensorflow_data.py  dense_image_warp.pkl
tests/data/: test_clic2020.py  test_clic_2020_image.py  test_clic_2020_video.py  test_div2k.py  test_kodak.py  test_open_images.py  test_vimeo_90k_septuplet.py
tests/distributions/: __init__.py  test_factorized.py  test_noisy_normal.py  test_uniform_noise.py
tests/entropy_coders/: test_entropy_coders.py
tests/functional/: test_count_flops.py  test_dense_image_warp.py  test_estimate_tails.py  test_hsv_to_rgb.py  test_image_255_scale.py  test_information_content.py  test_log_cdf.py  (+22 more)
tutorials/: Flop_Count_Example.ipynb  Metrics_Example.ipynb  image_compression.ipynb
(+206 files in other folders)
