cmake_minimum_required(VERSION 3.14...3.18)

project(neuralcompression)

include(FetchContent)
include(GNUInstallDirs)

FetchContent_Declare(
    pybind11
    URL https://github.com/pybind/pybind11/archive/refs/tags/v2.6.2.tar.gz
    URL_HASH SHA256=8ff2fff22df038f5cd02cea8af56622bc67f5b64534f1b83b9f133b8366acff2
)

FetchContent_MakeAvailable(pybind11)

pybind11_add_module(_foo MODULE neuralcompression/csrc/foo_py.cpp)
pybind11_add_module(_bar MODULE neuralcompression/csrc/bar_py.cpp)

install(TARGETS _foo DESTINATION neuralcompression/csrc)
install(TARGETS _bar DESTINATION neuralcompression/csrc)

set(ignoreMe "${SKBUILD}")
