[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=58.2.0",
    "torch>=1.9.1",
    "wheel>=0.37.0",
]

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "compressai.*",
    "fvcore.*",
    "lpips.*",
    "neuralcompression.ext.*",
    "torchvision.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.black]
target-version = ["py36", "py37", "py38"]
