[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=6.3.2",
    "setuptools>=58.2.0",
    "torch>=1.9.1",
    "wheel>=0.37.0",
]

[tool.black]
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "compressai.*",
    "fvcore.*",
    "lpips.*",
    "neuralcompression.ext.*",
    "torchvision.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.setuptools_scm]
write_to = "neuralcompression/_version.py"
