[metadata]
license_files = LICENSE

[mypy]

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-compressai.*]
ignore_missing_imports = True

[mypy-fvcore.*]
ignore_missing_imports = True

[mypy-lpips.*]
ignore_missing_imports = True

[mypy-neuralcompression.entropy_coders.craystack.*]
ignore_errors = True

[mypy-neuralcompression.ext.*]
ignore_errors = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[options]
install_requires =
    compressai~=1.1.8
    fvcore~=0.1.5.post20211023
    jax~=0.2.24
    jaxlib~=0.1.73
    lpips~=0.1.4
    pillow~=8.4.0
    pytorchvideo~=0.1.3
    torch==1.9.1
    torchmetrics~=0.5.1
    torchvision==0.10.1
    tqdm~=4.62.3

[options.extras_require]
dev =
    black==21.4b2
    flake8==4.0.1
    isort==5.9.3
    mypy==0.910
    opencv-python~=4.5.4.58
    pre-commit~=2.15.0
    pytest==6.2.5
    tensorflow~=2.6.0
    tensorflow-addons~=0.14.0
docs =
    sphinx-autodoc-typehints~=1.12.0
    sphinx-copybutton~=0.4.0
    sphinx-gallery~=0.10.0
    sphinx-rtd-theme~=1.0.0
    sphinx~=4.2.0
    sphinxcontrib-katex~=0.8.6
