[flake8]
extend-ignore = E203, E266, E501
max-doc-length=80
max-line-length=88
per-file-ignores=__init__.py:F401

[isort]
profile = black

[metadata]
author = Facebook AI Research
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: System :: Archiving :: Compression
description = A collection of tools for neural compression enthusiasts
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = neuralcompression
url = https://github.com/facebookresearch/NeuralCompression

[mypy]

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-compressai.*]
ignore_missing_imports = True

[mypy-fvcore.*]
ignore_missing_imports = True

[mypy-lpips.*]
ignore_missing_imports = True

[mypy-neuralcompression.entropy_coders.craystack.*]
ignore_errors = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    compressai>=1.1.9
    fvcore>=0.1.5.post20211023
    lpips>=0.1.4
    pillow>=8.4.0
    pytorchvideo>=0.1.3
    torch>=1.10.0
    torchmetrics>=0.6.1
    torchvision>=0.11.1
    tqdm>=4.62.3
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.910
    pre-commit>=2.16.0
    pytest>=6.2.5
docs =
    myst-parser>=0.15.2
    sphinx-autodoc-typehints>=1.12.0
    sphinx-copybutton>=0.4.0
    sphinx-gallery>=0.10.1
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-katex>=0.8.6
    sphinx>=4.3.1
tests =
    black==23.3.0
    compressai==1.2.4
    flake8==6.0.0
    fvcore==0.1.5.post20221221
    isort==5.12.0
    lpips==0.1.4
    mypy==1.1.1
    opencv-python~=4.7.0.72
    pillow==9.4.0
    pytest==7.2.2
    pytorchvideo==0.1.5
    tensorflow==2.12.0
    tensorflow-addons==0.19.0
    torch==2.0.0
    torchmetrics==0.11.4
    torchvision==0.15.1

[options.packages.find]
exclude =
    tests
    projects
